# python-utils

./: .gitignore  README.md  crop.py  crop_image.py  md5.py  pyproject.toml  slugify.py
.devcontainer/: devcontainer.json
pyutils/: __init__.py  crop.py  debounce.py  file.py  markdown.py  md5.py  slugify.py
